--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "functions": {
-    "api/rpc.ts": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "outputDirectory": "dist"
 }
