--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "functions": {
+    "api/rpc.ts": {
+      "maxDuration": 60
+    }
+  }
 }
